# Grieg

./: .editorconfig  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  NOTICE  PATENTS  README-QUICKSTART.md  README.md  README_lambda.md  SECURITY.md  TRADEMARKS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  paper.yml  release.yml  telegram-qa.yml  wheel.yml
conformance/: lambda.json  phase-dominance.jsonl  sap-dominance.jsonl  sap-smoke.jsonl  smoke.jsonl
docs/: APPLY.md  BATTLEMAP.md  CONTRACTS_BASIS5.md  GRIEG_SNAPSHOT_0–6.md  Grieg ↔ SAP Delivery Blueprint (v1)  Grieg ↔ SAP Delivery Blueprint (v1).md  Grieg-Packaging-Model  Grieg-Whitepaper.md  Grieg-Whitepaper_1.md  Grieg-to-Lee-Seven-Bridges.md  IP_Policy.md  PROJECT_SNAPSHOT.md  PROJECT_SNAPSHOT.md:Zone.Identifier  aims.md  event-schema-dive.json  geometry-optional.md  grieg-dive-analyzer-product-sheet.md  grieg-dive-report-mock.md  grieg-main  grieg-main.tex  grieg.bib  index.md  invariant-pulse-channel  invariant-pulse-channel.md  lineage.md  method.md  novelty-audit  novelty-audit.md  origin_note.md  sample-dive-report-outline.md  sink.md  trace.schema.json  verification.md
docs/.github/workflows/: Grieg-Whitepaper.md  paper.yml
docs/onramp/: index.md
docs/quality/: README.md  incident-playbook.md  install-qa.sh  pr-review-checklist.md  qa-checklist.md  qa-gate.sh  qa-positioning.md  release-checklist.md  runbook-engine-http-adapter.md  runbook-telegram-connector.md
examples/: README.md  counterfactuals.md  phase-schematics-set.md  phase-tour-complete.md
examples/onramp/: 01_basics.md  02_jsonl.md  03_geometry.md
grieg-cli/: Cargo.toml  Cargo.toml.bak.20250916-165051
grieg-cli/src/: .main.rs.swp  main.rs
grieg-cli/src/backups/: main.rs.txt
grieg-endpoints/: README-ENDPOINTS.md
grieg-engine/: Cargo.toml  Cargo.toml.bak
grieg-engine/src/: Cargo.toml  ast.rs  eval.rs  lib.rs  phase.rs  trace.rs  value.rs
grieg-engine/src/lam/: ast.rs  eval.rs
grieg-engine/src/patches/: eval.rs
grieg-http/: Cargo.toml
grieg-http/src/: main.rs
grieg-ipc/: README_BUNDLE.md
grieg-ipc/grieg-ipc-cli/: Cargo.toml
grieg-ipc/grieg-telemetry/: Cargo.toml
grieg-ipc/grieg_ipc_bundle/grieg-ipc-cli/: Cargo.toml
grieg-ipc/grieg_ipc_bundle/grieg-ipc-cli/src/: main.rs
grieg-ipc/grieg_ipc_bundle/grieg-telemetry/: Cargo.toml
grieg-ipc/grieg_ipc_bundle/grieg-telemetry/src/: lib.rs
grieg-parser/: Cargo.toml
grieg-parser/src/: grammar.pest
grieg-parser/src/insure/: lib.rs.txt
grieg-proptest/: Cargo.toml
grieg-proptest/src/: lib.rs
grieg-py/: Cargo.toml  README.md  pyproject.toml
grieg-py/src/: lib.rs
grieg-sap/: README-MML.md  README-SAP.md  README.md
grieg-sap/abap/demo/: ZGRIEG_DEMO.abap
grieg-sap/abap/icf_inbound/: ZCL_GRIEG_ICF_HANDLER.abap
grieg-sap/abap/outbound_client/: ZCL_GRIEG_HTTP_CLIENT.abap
grieg-sap/cpi/: Normalizer.groovy
grieg-sap/docs/basis/: BASIS_INSTALL.md
grieg-sap/docs/user/: EXEC_SUMMARY.md  POWER_USER_GUIDE.md
grieg-sap/postman/: Grieg.postman_collection.json
grieg-sap/security/: SECURITY_CONTACT.md
grieg-sap/sidecar/: README.md
scripts/: bump-version.sh  jsonl_run.sh
scripts/grieg/: grieg-bot-up.sh  grieg-http-down.sh  grieg-http-status.sh  grieg-http-up.sh  grieg-status.sh  grieg-up.sh
spec/: LEDGER.md  SPEC.md  core.ebnf  operational_semantics.md
(+25 files in other folders)
