[package]
name = "grieg-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "grieg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
grieg-engine = { path = "../grieg-engine" }
grieg-parser = { path = "../grieg-parser" }

[package.metadata.maturin]
name = "grieg"


