[package]
name = "grieg-telemetry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Telemetry helpers for Grieg: JSONL sink and event struct"
repository = "https://github.com/KILGORETROUT111/Grieg"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
